--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
 
+  background: rgb(8,109,159);
+  background: radial-gradient(circle, rgba(8,109,159,1) 0%, rgba(45,6,89,1) 100%);
+}
+
+.dark {
+  background-color: #18192b;
+}
 
 * {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -11,7 +19,7 @@
 
   color-scheme: dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -36,4 +44,25 @@ primary {
 
 secondary {
   color: #8b8b8b;
+}
+  
+@layer components {
+
+  .sidebar-icon {
+    @apply relative flex items-center justify-center 
+      h-12 w-12 mt-2 mb-2 mx-auto shadow-lg
+      bg-dark text-puke 
+      hover:bg-puke hover:text-bubble
+      rounded-3xl hover:rounded-xl
+      transition-all duration-300 ease-linear
+      cursor-pointer;
+  }
+
+.sidebar-tooltip {
+  @apply absolute w-auto p-2 m-2 min-w-max left-14
+  rounded-md shadow-md
+  text-bubble bg-dark 
+  text-xs font-bold
+  transition-all duration-100 scale-0 origin-left;
+}
 }
