edited mobile styling

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -44,6 +44,7 @@ primary {
 
 secondary {
   color: #8b8b8b;
+
 }
   
 @layer components {
@@ -62,7 +63,7 @@ secondary {
   @apply absolute w-auto p-2 m-2 min-w-max left-14
   rounded-md shadow-md
   text-bubble bg-dark 
-  text-xs font-bold
+  text-xs font-bold collapse sm:visible
   transition-all duration-100 scale-0 origin-left;
 }
 }
