--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,3 +70,24 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+@layer components {
+
+  .sidebar-icon {
+    @apply relative flex items-center justify-center 
+      h-12 w-12 mt-2 mb-2 mx-auto shadow-lg
+      bg-dark text-puke 
+      hover:bg-puke hover:text-bubble
+      rounded-3xl hover:rounded-xl
+      transition-all duration-300 ease-linear
+      cursor-pointer;
+  }
+
+.sidebar-tooltip {
+  @apply absolute w-auto p-2 m-2 min-w-max left-14
+  rounded-md shadow-md
+  text-bubble bg-dark 
+  text-xs font-bold collapse sm:visible
+  transition-all duration-100 scale-0 origin-left;
+}
+}
